added nivedita changes